--- a/restaurants.html
+++ b/restaurants.html
@@ -67,12 +67,6 @@
                     <span class="text-barq-orange font-black text-2xl italic">للتوصيل</span>
                 </a>
             </div>
-            <div id="mobile-menu" class="hidden md:hidden bg-white/95 backdrop-blur-lg border-t border-gray-100 p-6 space-y-4 shadow-2xl">
-                <a href="index.html" class="block font-black text-barq-orange">الرئيسية</a>
-                <a href="restaurants.html" class="block font-black text-gray-700">المطاعم</a>
-                <a href="offers.html" class="block font-black text-gray-700">العروض 🔥</a>
-                <a href="about.html" class="block font-black text-gray-700">من نحن</a>
-            </div>
             <div class="flex items-center gap-3">
                 <button onclick="openCartDrawer()" class="p-3 bg-white border rounded-2xl relative shadow-sm">
                     <span id="cart-count" class="absolute -top-2 -right-2 bg-barq-orange text-white text-[11px] w-6 h-6 flex items-center justify-center rounded-full font-black hidden">0</span>
@@ -81,6 +75,21 @@
                 <button onclick="toggleMobileMenu()" class="md:hidden p-3 bg-gray-100 rounded-2xl text-barq-blue text-2xl">☰</button>
             </div>
         </div>
+    </header>
+
+    <div id="mobile-menu" class="fixed inset-0 bg-[#0D1B2A] z-[5000] hidden flex flex-col items-center justify-center gap-8 text-white">
+        <button onclick="toggleMobileMenu()" class="absolute top-6 right-6 text-4xl">✕</button>
+        <a href="index.html" class="text-2xl font-black italic">الرئيسية</a>
+        <a href="restaurants.html" class="text-2xl font-black italic text-barq-orange">المطاعم</a>
+        <a href="offers.html" class="text-2xl font-black italic">العروض 🔥</a>
+        <a href="about.html" class="text-2xl font-black italic">من نحن</a>
+    </div>
+
+    <div class="bg-white p-4 rounded-3xl border border-gray-100 shadow-sm">
+        <h3 class="font-black text-sm mb-2 text-barq-blue italic text-right">📱 رقم هاتفك</h3>
+        <input type="tel" id="customer-phone" placeholder="7XXXXXXXX" 
+               class="w-full p-3 rounded-xl border-2 border-gray-100 font-bold text-sm text-center outline-none focus:border-barq-orange bg-gray-50">
+    </div>
     </header>
     <div id="mobile-menu" class="fixed inset-0 bg-[#0D1B2A] z-[5000] hidden flex flex-col items-center justify-center gap-8 text-white">
         <button onclick="toggleMobileMenu()" class="absolute top-6 right-6 text-4xl">✕</button>
