--- a/restaurants.html
+++ b/restaurants.html
@@ -85,7 +85,9 @@
         <div class="container mx-auto px-4 text-center">
              <input type="hidden" id="selected-restaurant-name" value="مطعم غير محدد">
 
-            <h1 class="text-3xl font-black mb-8 italic">قائمة المطاعم 🏢</h1>
+             <div id="page-title-container">
+                <h1 class="text-3xl font-black mb-8 italic">قائمة المطاعم 🏢</h1>
+            </div>
             
             <div class="max-w-2xl mx-auto relative mb-12">
                 <input type="text" id="search-input" placeholder="ابحث عن مطعم أو وجبة..." 
