--- a/restaurants.html
+++ b/restaurants.html
@@ -98,6 +98,7 @@
                 </div>
         </div>
     </main>
+    <input type="hidden" id="selected-restaurant-name" value="البرق للتوصيل">
     <div id="cart-drawer" class="fixed top-0 left-0 h-full w-full max-w-[380px] bg-white translate-x-[-100%] flex flex-col border-r-4 border-barq-orange shadow-2xl transition-transform duration-300 z-[5000]">
         
         <div class="p-6 bg-barq-blue text-white flex justify-between items-center shadow-lg">
